hphp/hack/test/typecheck/fc_enum_17.php.exp
File "fc_enum_17.php", line 9, characters 3-17:
Don't use dynamic classes (Typing[4125])
