hphp/hack/test/typecheck/fc_enum_17.php
<?hh

enum Foo: int {
  X = 1;
}

function f(): void {
  $v = Foo::X;
  $v::getValues();
}
